--- a/restaurant.html
+++ b/restaurant.html
@@ -59,10 +59,36 @@
     Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
+  <div class="modal">
+    <form class="modal__content">
+      <div class="title__header">Restaurant review</div>
+      <span class="close__modal">&times;</span>
+      <label for="reviewer">Reviewer</label>
+      <input type="text" id="reviewer" name="">
+      <label>Rate this restaurant</label>
+      <div class="review-stars">
+        <input type="radio" id="star5" name="rating" value="5" aria-label="5 stars">
+        <label for="star5"><i class="icon-star"></i></label>
+        <input type="radio" id="star4" name="rating" value="4" aria-label="4 stars">
+        <label for="star4"><i class="icon-star"></i></label>
+        <input type="radio" id="star3" name="rating" value="3" aria-label="3 stars">
+        <label for="star3"><i class="icon-star"></i></label>
+        <input type="radio" id="star2" name="rating" value="2" aria-label="2 stars">
+        <label for="star2"><i class="icon-star"></i></label>
+        <input type="radio" id="star1" name="rating" value="1" aria-label="1 stars">
+        <label for="star1"><i class="icon-star"></i></label>
+      </div>
+      <label for="review">Review</label>
+      <textarea id="review" rows="5"></textarea>
+      <input type="submit" value="Add review" name="" class="add-review">
+    </form>
+  </div>
+  <div class="modal__back"></div>
   <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script>
   <!-- Beginning scripts -->
   <!-- Database helpers -->
   <script src="js/dbhelper.js"></script>
+  <script src="js/idb.js"></script>
   <!-- Main javascript file -->
   <script src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
