feat: review Improvements

--- a/restaurant.html
+++ b/restaurant.html
@@ -43,7 +43,7 @@
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+      <table id="restaurant-hours" tabindex="0"></table>
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
@@ -62,7 +62,7 @@
   <div class="modal">
     <form class="modal__content">
       <div class="title__header">Restaurant review</div>
-      <span class="close__modal">&times;</span>
+      <span class="close__modal" tabindex="0">&times;</span>
       <label for="reviewer">Reviewer</label>
       <input type="text" id="reviewer" name="">
       <label>Rate this restaurant</label>
